--- a/rufangrongke/rufangrongke/Classes/wo/Controller/WXZPersonalSexVC.xib
+++ b/rufangrongke/rufangrongke/Classes/wo/Controller/WXZPersonalSexVC.xib
@@ -46,16 +46,12 @@
                                 <constraint firstAttribute="height" constant="17" id="eXp-QW-R6N"/>
                             </constraints>
                         </imageView>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2V0-Q1-ChT">
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wo_personal_divider" translatesAutoresizingMaskIntoConstraints="NO" id="xDt-o6-D2E">
                             <rect key="frame" x="0.0" y="55" width="600" height="1"/>
-                            <color key="backgroundColor" red="0.89019607840000003" green="0.8862745098" blue="0.8862745098" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="1" id="fd1-X9-4aT"/>
+                                <constraint firstAttribute="height" constant="1" id="tQ4-xW-6VV"/>
                             </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                            <nil key="highlightedColor"/>
-                        </label>
+                        </imageView>
                         <button opaque="NO" tag="100007" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eVE-AT-SgS">
                             <rect key="frame" x="0.0" y="0.0" width="600" height="55"/>
                             <constraints>
@@ -83,23 +79,23 @@
                         <constraint firstAttribute="trailing" secondItem="PAH-GD-IeP" secondAttribute="trailing" constant="12" id="5kd-ec-wz2"/>
                         <constraint firstAttribute="trailing" secondItem="eVE-AT-SgS" secondAttribute="trailing" id="765-Ne-Jn5"/>
                         <constraint firstItem="sCM-fb-YQu" firstAttribute="leading" secondItem="BuW-gB-Lf3" secondAttribute="leading" constant="12" id="B3C-ow-MIT"/>
+                        <constraint firstItem="xDt-o6-D2E" firstAttribute="leading" secondItem="BuW-gB-Lf3" secondAttribute="leading" id="FSA-st-uWw"/>
                         <constraint firstAttribute="bottom" secondItem="PAH-GD-IeP" secondAttribute="bottom" constant="20" id="Gjj-Aw-38c"/>
                         <constraint firstItem="eVE-AT-SgS" firstAttribute="top" secondItem="BuW-gB-Lf3" secondAttribute="top" id="Jjs-oV-uPV"/>
                         <constraint firstItem="EcN-24-LiQ" firstAttribute="top" secondItem="BuW-gB-Lf3" secondAttribute="top" constant="21" id="MoG-lB-snc"/>
                         <constraint firstItem="eVE-AT-SgS" firstAttribute="leading" secondItem="BuW-gB-Lf3" secondAttribute="leading" id="NRM-HV-pJ6"/>
                         <constraint firstItem="UH3-Ot-viX" firstAttribute="leading" secondItem="BuW-gB-Lf3" secondAttribute="leading" constant="12" id="PB1-9i-ric"/>
-                        <constraint firstAttribute="centerY" secondItem="2V0-Q1-ChT" secondAttribute="centerY" id="Sy4-8k-mZn"/>
+                        <constraint firstAttribute="centerY" secondItem="xDt-o6-D2E" secondAttribute="centerY" id="QBK-Av-kSb"/>
                         <constraint firstAttribute="bottom" secondItem="nFi-JF-RjN" secondAttribute="bottom" id="eoa-Xg-07D"/>
                         <constraint firstAttribute="bottom" secondItem="sCM-fb-YQu" secondAttribute="bottom" constant="20" id="f1f-Mf-Tkf"/>
+                        <constraint firstAttribute="trailing" secondItem="xDt-o6-D2E" secondAttribute="trailing" id="gFC-vH-b0r"/>
                         <constraint firstItem="sCM-fb-YQu" firstAttribute="leading" secondItem="UH3-Ot-viX" secondAttribute="leading" id="gfz-Xg-gjq"/>
                         <constraint firstItem="EcN-24-LiQ" firstAttribute="trailing" secondItem="PAH-GD-IeP" secondAttribute="trailing" id="i1Y-5U-c7F"/>
-                        <constraint firstItem="2V0-Q1-ChT" firstAttribute="leading" secondItem="BuW-gB-Lf3" secondAttribute="leading" id="n3k-F4-STz"/>
                         <constraint firstItem="nFi-JF-RjN" firstAttribute="leading" secondItem="BuW-gB-Lf3" secondAttribute="leading" id="nvq-3G-vDy"/>
                         <constraint firstAttribute="height" constant="110" id="oYw-bo-fOV"/>
                         <constraint firstAttribute="trailing" secondItem="nFi-JF-RjN" secondAttribute="trailing" id="qsn-hc-XVm"/>
                         <constraint firstItem="nFi-JF-RjN" firstAttribute="top" secondItem="eVE-AT-SgS" secondAttribute="bottom" id="qxG-OE-uAm"/>
                         <constraint firstItem="UH3-Ot-viX" firstAttribute="top" secondItem="BuW-gB-Lf3" secondAttribute="top" constant="20" id="r92-17-7l1"/>
-                        <constraint firstAttribute="trailing" secondItem="2V0-Q1-ChT" secondAttribute="trailing" id="sEB-Ok-HBC"/>
                         <constraint firstAttribute="trailing" secondItem="EcN-24-LiQ" secondAttribute="trailing" constant="12" id="wXu-Tj-SQu"/>
                     </constraints>
                 </view>
@@ -129,6 +125,7 @@
     </objects>
     <resources>
         <image name="wo_determine" width="340" height="44"/>
+        <image name="wo_personal_divider" width="375" height="1"/>
         <image name="wo_personalsex" width="17" height="17"/>
     </resources>
 </document>
