1026 王晓植: 验证码倒计时

--- a/rufangrongke/rufangrongke/Classes/main/Controller/WXZFindPasswordController.xib
+++ b/rufangrongke/rufangrongke/Classes/main/Controller/WXZFindPasswordController.xib
@@ -7,9 +7,10 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="WXZFindPasswordController">
             <connections>
+                <outlet property="getVerificationCode_button" destination="hJY-Ex-sYU" id="slu-ir-Z1A"/>
                 <outlet property="phoneNumber" destination="e91-cy-sXd" id="o8g-hn-hdR"/>
-                <outlet property="resetPassword" destination="fci-Fr-N45" id="Wbr-6J-LMS"/>
-                <outlet property="verificationCode" destination="9OA-r7-ajU" id="wwE-6z-QIg"/>
+                <outlet property="resetPassword" destination="fci-Fr-N45" id="y26-Rn-huG"/>
+                <outlet property="verificationCode" destination="9OA-r7-ajU" id="P2i-vz-gsw"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -153,7 +154,7 @@
                         </mask>
                     </variation>
                 </view>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hJY-Ex-sYU">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hJY-Ex-sYU" customClass="JxbScaleButton">
                     <rect key="frame" x="520" y="92.5" width="72" height="30"/>
                     <color key="backgroundColor" red="0.87843137250000003" green="0.87843137250000003" blue="0.87843137250000003" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
@@ -164,6 +165,9 @@
                         <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
+                    <connections>
+                        <action selector="getVerificationCode:" destination="-1" eventType="touchUpInside" id="S2E-iy-HNC"/>
+                    </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W1f-YZ-qLC">
                     <rect key="frame" x="18" y="235" width="564" height="40"/>
@@ -175,6 +179,9 @@
                         <color key="titleColor" red="0.96862745100000003" green="0.96862745100000003" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
+                    <connections>
+                        <action selector="findPassword:" destination="-1" eventType="touchUpInside" id="5PM-a9-R11"/>
+                    </connections>
                 </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
